# gpt-realtime-2-demo

./: .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  SPEC.md  docker-compose.yml
.claude/: settings.local.json
.ignore/: cc1_realtime.txt  cc2_realtime.txt  cc3_realtime.txt  cc5_realtime.txt  cc6_realtime.txt  transcript.txt
core/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
core/alembic/: env.py  script.py.mako
core/alembic/versions/: 20260507_000001_initial.py  20260508_000002_widen_modes.py  20260508_000003_audit_divergences.py
core/src/cockpit_core/: __init__.py  db.py  logging.py  main.py  redis_client.py  settings.py
core/src/cockpit_core/agent/: __init__.py  approvals.py  contract.py  dispatch.py  lifecycle.py  registry.py  runtime.py
core/src/cockpit_core/api/: approvals.py  audits.py  conversations.py  health.py  sessions.py  verticals.py
core/src/cockpit_core/eval/: __init__.py  cli.py  runner.py  synthesize.py
core/src/cockpit_core/guardrails/: __init__.py  middleware.py  pii.py
core/src/cockpit_core/observability/: __init__.py  audit.py  notifier.py  sinks.py  tracer.py
core/src/cockpit_core/store/: __init__.py  _helpers.py  approvals.py  audit_divergences.py  conversations.py  tool_calls.py  trace_events.py  turns.py
core/src/cockpit_core/verticals/: __init__.py  business_hours.py  loader.py
core/tests/: conftest.py  test_approval_state_machine.py  test_audit.py  test_business_hours.py  test_guardrails.py  test_hvac_tools.py  test_notetaker_post_call.py  test_pii.py  test_registry.py  test_synthesize_eval.py  test_tracer.py  test_turn_model_tagging.py  test_vertical_loader.py
core/tests/eval/: test_hvac_scenarios.py
docs/: eval-format.md  gpt-realtime-2-docs.txt  index.md  ops.md  testing.md  use-cases.md
e2e/: run.sh
edge/: .eslintrc.json  Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+92 files in other folders)
