[project]
name = "cockpit-core"
version = "0.1.0"
description = "Voice Operations Cockpit — Python agent core"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "tzdata>=2024.2; sys_platform == 'win32'",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "structlog>=24.1",
    "openai>=1.40",
    "websockets>=12.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "uuid7>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "black>=24.4",
    "types-pyyaml>=6.0.12",
]

[project.scripts]
cockpit-core = "cockpit_core.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cockpit_core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ASYNC", "S", "RET", "SIM", "PL"]
ignore = [
    "S101",     # use of assert
    "PLR2004",  # magic value comparison
    "PLR0913",  # too many arguments
    "PLW0603",  # global statement (deliberate for module-level singletons)
    "S104",     # 0.0.0.0 bind (intentional in container)
    "PLR0912",  # too many branches
    "PLC0415",  # imports inside functions (deliberate for lazy imports / test isolation)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "PLR2004", "F401"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
plugins = []

[[tool.mypy.overrides]]
module = ["asyncpg.*", "uvicorn.*", "uuid7.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
